--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ li:hover{
     border-color: black;
     border-radius: 25px;
     padding: 20px;
-    background-color: #99ccff;
+    background-color: white;
 }
 
 .bgc-grey{
@@ -38,7 +38,7 @@ li:hover{
 
 
 body{
-    background-color: #3399ff;
+    background-color: white;
 }
 
 img{
