--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ li:hover{
 
 .bgc-grey{
     margin-top: 25px;
-    background-color: #D3D3D3;
+    background-color: grey;
     border-radius: 25px;
     padding: 20px;
     width: 200px;
